--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,6 +8,8 @@
         <artifactId>openai-java</artifactId>
         <version>${openai-java.version}</version>
     </parent>
+    <packaging>jar</packaging>
+    <version>${openai-java.version}</version>
 
     <artifactId>api</artifactId>
 
