change example name

--- a/example/pom.xml
+++ b/example/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>openai-java</artifactId>
         <version>${openai-java.version}</version>
     </parent>
-    <artifactId>example</artifactId>
+    <artifactId>openai-example</artifactId>
     <name>openai-example</name>
     <version>${openai-java.version}</version>
     <url>http://maven.apache.org</url>
