--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,19 @@
     <artifactId>openai-java</artifactId>
     <version>${openai-java.version}</version>
     <packaging>pom</packaging>
+
+    <name>ChatGPT of Openai API for Java</name>
+    <description>ChatGPT of Openai API for Java</description>
+    <url>https://github.com/forestwanglin/openai-java</url>
+
     <modules>
-        <module>api</module>
+        <module>core</module>
         <module>example</module>
         <module>service</module>
     </modules>
 
     <properties>
-        <openai-java.version>0.8.0</openai-java.version>
+        <openai-java.version>0.9.0</openai-java.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,6 +36,34 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
     <distributionManagement>
@@ -43,21 +76,5 @@
             <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
-
-    <!--    <build>-->
-    <!--        <plugins>-->
-    <!--            <plugin>-->
-    <!--                <groupId>org.sonatype.plugins</groupId>-->
-    <!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
-    <!--                <version>1.6.7</version>-->
-    <!--                <extensions>true</extensions>-->
-    <!--                <configuration>-->
-    <!--                    <serverId>ossrh</serverId>-->
-    <!--                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>-->
-    <!--                    <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-    <!--                </configuration>-->
-    <!--            </plugin>-->
-    <!--        </plugins>-->
-    <!--    </build>-->
 
 </project>
