--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,30 @@
     <description>ChatGPT of Openai API for Java</description>
     <url>https://github.com/forestwanglin/openai-java</url>
 
+    <scm>
+        <connection>https://github.com/forestwanglin/openai-java.git</connection>
+        <url>https://github.com/forestwanglin/openai-java.git</url>
+    </scm>
+    <developers>
+        <developer>
+            <name>Forest Wang</name>
+            <id>forestwanglin</id>
+            <email>forest_wanglin@163.com</email>
+            <timezone>8</timezone>
+            <organization>felh.xyz</organization>
+            <roles>
+                <role>Java Developer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://github.com/forestwanglin/openai-java/blob/main/LICENSE</url>
+        </license>
+    </licenses>
+
     <modules>
         <module>core</module>
         <module>example</module>
@@ -21,8 +45,8 @@
 
     <properties>
         <openai-java.version>0.9.0</openai-java.version>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <maven.compiler.release>8</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -66,7 +90,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>2.5</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -91,16 +115,16 @@
                 </executions>
             </plugin>
 <!--            <plugin>-->
-            <!--                <groupId>org.sonatype.plugins</groupId>-->
-            <!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
-            <!--                <version>1.6.8</version>-->
-            <!--                <extensions>true</extensions>-->
-            <!--                <configuration>-->
-            <!--                    <serverId>ossrh</serverId>-->
-            <!--                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
-            <!--                    <autoReleaseAfterClose>false</autoReleaseAfterClose>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
+<!--                <groupId>org.sonatype.plugins</groupId>-->
+<!--                <artifactId>nexus-staging-maven-plugin</artifactId>-->
+<!--                <version>1.6.7</version>-->
+<!--                <extensions>true</extensions>-->
+<!--                <configuration>-->
+<!--                    <serverId>ossrh</serverId>-->
+<!--                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
+<!--                    <autoReleaseAfterClose>false</autoReleaseAfterClose>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
