--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xyz.felh</groupId>
     <artifactId>openai-java</artifactId>
-    <version>${openai-java.version}</version>
+    <version>0.9.2</version>
     <packaging>pom</packaging>
 
     <name>ChatGPT of Openai API for Java</name>
@@ -44,7 +44,6 @@
     </modules>
 
     <properties>
-        <openai-java.version>0.9.0</openai-java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <maven.compiler.release>8</maven.compiler.release>
