--- a/service/pom.xml
+++ b/service/pom.xml
@@ -6,9 +6,9 @@
     <parent>
         <groupId>xyz.felh</groupId>
         <artifactId>openai-java</artifactId>
-        <version>${openai-java.version}</version>
+        <version>0.9.2</version>
     </parent>
-    <version>${openai-java.version}</version>
+
     <artifactId>openai-service</artifactId>
     <packaging>jar</packaging>
 
