--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <maven.compiler.release>8</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <openai-java.version>0.9.3</openai-java.version>
     </properties>
 
     <build>
