--- a/service/pom.xml
+++ b/service/pom.xml
@@ -9,11 +9,11 @@
         <version>1.3.0</version>
     </parent>
 
-    <artifactId>openai-service</artifactId>
+    <artifactId>service</artifactId>
     <packaging>jar</packaging>
 
-    <name>OpenAi API service</name>
-    <description>OpenAi API service</description>
+    <name>OpenAi service</name>
+    <description>OpenAi service</description>
     <url>https://github.com/forestwanglin/openai-java/tree/main/service</url>
 
     <properties>
@@ -23,9 +23,16 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>xyz.felh</groupId>
-            <artifactId>openai-core</artifactId>
+            <artifactId>core</artifactId>
+            <version>${openai-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>xyz.felh</groupId>
+            <artifactId>jtokkit</artifactId>
             <version>${openai-java.version}</version>
         </dependency>
 
@@ -89,12 +96,6 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.9.2</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.knuddels</groupId>
-            <artifactId>jtokkit</artifactId>
-            <version>0.5.0</version>
         </dependency>
 
     </dependencies>
