--- a/jtokkit/pom.xml
+++ b/jtokkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>xyz.felh</groupId>
         <artifactId>openai-java</artifactId>
-        <version>1.4.1</version>
+        <version>1.4.2</version>
     </parent>
 
     <artifactId>jtokkit</artifactId>
@@ -28,6 +28,18 @@
             <groupId>xyz.felh</groupId>
             <artifactId>core</artifactId>
             <version>${openai-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.26</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-json-schema</artifactId>
+            <version>4.4.3</version>
         </dependency>
 
         <dependency>
