add fastjson2 annotation for all entitiy

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>xyz.felh</groupId>
         <artifactId>openai-java</artifactId>
-        <version>3.3.0304</version>
+        <version>3.4.0304</version>
     </parent>
 
     <artifactId>core</artifactId>
@@ -23,6 +23,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.26</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
