--- a/jtokkit/pom.xml
+++ b/jtokkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>xyz.felh</groupId>
         <artifactId>openai-java</artifactId>
-        <version>3.5.0304</version>
+        <version>3.6.0304</version>
     </parent>
 
     <artifactId>jtokkit</artifactId>
@@ -28,6 +28,12 @@
             <groupId>xyz.felh</groupId>
             <artifactId>core</artifactId>
             <version>${openai-java.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.14.0</version>
         </dependency>
 
         <dependency>
