--- a/jtokkit/pom.xml
+++ b/jtokkit/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>xyz.felh</groupId>
         <artifactId>openai-java</artifactId>
-        <version>3.11.2024051502</version>
+        <version>3.11.2024051503</version>
     </parent>
 
     <artifactId>jtokkit</artifactId>
@@ -19,6 +19,7 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <commons-langs.version>3.14.0</commons-langs.version>
     </properties>
@@ -28,7 +29,7 @@
         <dependency>
             <groupId>xyz.felh</groupId>
             <artifactId>core</artifactId>
-            <version>3.11.2024051502</version>
+            <version>3.11.2024051503</version>
         </dependency>
 
         <dependency>
